--- a/swastik-main/message-from-chairman.html
+++ b/swastik-main/message-from-chairman.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Read the inspiring message from our Chairman about Swastik Interiors' heritage, values, and commitment to creating timeless interior designs.">
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="chairman-page">
   <header class="site-header" role="banner" aria-label="Primary">
     <div class="container site-header__bar">
       <a class="brand" href="index.html" aria-label="Swastik Home">
@@ -49,7 +49,7 @@
 
   <main id="main">
     <!-- Hero Section -->
-    <section class="contact-hero page-hero--chairman" aria-labelledby="page-hero-title">
+    <section class="page-hero page-hero--chairman" aria-labelledby="page-hero-title">
       <div class="contact-hero__background">
         <img src="assets/herol.png" alt="Message from Chairman" class="page-hero__image">
         <div class="contact-hero__gradient"></div>
